added css groudwork

--- a/b2.html
+++ b/b2.html
@@ -4,45 +4,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="text/javascript" src="/S6C-B2/reasources/javascript/b2.js"></script>
+    <link rel="stylesheet" href="/S6C-B2/reasources/css/b2.css">
     <title>Document</title>
 </head>
 
 <body>
     <div class="header">
-        <img src="/reasources/image/Screenshot 2022-01-13 at 09.33.50.png" alt="logo">
+        <div class="img">
+        <img src="/S6C-B2/reasources/image/Screenshot 2022-01-13 at 09.33.50.png" alt="logo">
     </div>
+    <div class="rectangle"></div>
     <div class="subjects">
         <div class="Art">
-            <img src="/reasources/image/s6c_artanddesign_c.jpeg" alt="Art">
+            <img src="/S6C-B2/reasources/image/s6c_artanddesign_c.jpeg" alt="Art">
             <p>Fine Art</p>
         </div>
         <div class="Media">
-            <img src="/reasources/image/Screen-Shot-2017-11-23-at-10.00.16.png" alt="Media">
+            <img src="/S6C-B2/reasources/image/Screen-Shot-2017-11-23-at-10.00.16.png" alt="Media">
             <p>Media Studies</p>
         </div>
 
         <div class="Esport">
-            <img src="/reasources/image/test-e1603287620622.png" alt="Esport">
+            <img src="/S6C-B2/reasources/image/test-e1603287620622.png" alt="Esport">
             <p>Esport</p>
         </div>
         <div class="Software">
-            <img src="/reasources/image/computer-programingDONE.jpeg" alt="Software">
+            <img src="/S6C-B2/reasources/image/computer-programingDONE.jpeg" alt="Software">
             <p>Software Design</p>
         </div>
         <div class="Film">
-            <img src="/reasources/image/FilmStudies2.jpeg" alt="Film">
+            <img src="/S6C-B2/reasources/image/FilmStudies2.jpeg" alt="Film">
             <P>Film Studies</P>
         </div>
         <div class="photography">
-            <img src="/reasources/image/s6c_photography.jpeg" alt="photography">
+            <img src="/S6C-B2/reasources/image/s6c_photography.jpeg" alt="photography">
             <p>photography</p>
         </div>
         <div class="healthAndSocail">
-            <img src="/reasources/image/HSC-Pathway-1.png" alt="healthAndSocail">
+            <img src="/S6C-B2/reasources/image/HSC-Pathway-1.png" alt="healthAndSocail">
             <p>Health and Social Care</p>
         </div>
         <div class="sport">
-            <img src="/reasources/image/sportandexercisescienceDONE.jpeg" alt="sport">
+            <img src="/S6C-B2/reasources/image/sportandexercisescienceDONE.jpeg" alt="sport">
             <p>Sport</p>
         </div>
     </div>
