--- a/b2.html
+++ b/b2.html
@@ -12,7 +12,7 @@
 <body>
     <div class="header">
         <div class="img">
-        <img src="/S6C-B2/reasources/image/Screenshot 2022-01-13 at 09.33.50.png" alt="logo">
+        <img src="/S6C-B2/reasources/image/logo.png" alt="logo">
     </div>
     <div class="rectangle"></div>
     <div class="subjects">
