--- a/b2.html
+++ b/b2.html
@@ -11,13 +11,13 @@
 
 <body>
     <div class="header">
-        <div class="img">
-        <img src="/S6C-B2/reasources/image/logo.png" alt="logo">
-    </div>
+        <img class="logo" src="/S6C-B2/reasources/image/logo.png" alt="logo">
+    
     <div class="rectangle"></div>
-    <div class="subjects">
+    </div>
+  
         <div class="Art">
-            <img src="/S6C-B2/reasources/image/s6c_artanddesign_c.jpeg" alt="Art">
+            <img src="/S6C-B2/reasources/image/s6c_artanddesign_c.jpeg" alt="picture">
             <p>Fine Art</p>
         </div>
         <div class="Media">
@@ -48,8 +48,8 @@
         <div class="sport">
             <img src="/S6C-B2/reasources/image/sportandexercisescienceDONE.jpeg" alt="sport">
             <p>Sport</p>
-        </div>
-    </div>
+        </div> 
+    
 </body>
 
 </html>
