did some more css

--- a/b2.html
+++ b/b2.html
@@ -17,7 +17,9 @@
     </div>
   
         <div class="Art">
+            <div class="artImage">
             <img src="/S6C-B2/reasources/image/s6c_artanddesign_c.jpeg" alt="picture">
+            </div>
             <p>Fine Art</p>
         </div>
         <div class="Media">
