--- a/b2.html
+++ b/b2.html
@@ -18,7 +18,7 @@
   
         <div class="Art">
             <div class="artImage">
-            <img src="/S6C-B2/reasources/image/s6c_artanddesign_c.jpeg" alt="picture">
+            <img id="img" src="/S6C-B2/reasources/image/s6c_artanddesign_c.jpeg" alt="picture">
             </div>
             <p>Fine Art</p>
         </div>
