images got good width and hieght

--- a/b2.html
+++ b/b2.html
@@ -23,32 +23,32 @@
             <p>Fine Art</p>
         </div>
         <div class="Media">
-            <img src="/S6C-B2/reasources/image/Screen-Shot-2017-11-23-at-10.00.16.png" alt="Media">
+            <img id="img" src="/S6C-B2/reasources/image/Screen-Shot-2017-11-23-at-10.00.16.png" alt="Media">
             <p>Media Studies</p>
         </div>
 
         <div class="Esport">
-            <img src="/S6C-B2/reasources/image/test-e1603287620622.png" alt="Esport">
+            <img id="img" src="/S6C-B2/reasources/image/test-e1603287620622.png" alt="Esport">
             <p>Esport</p>
         </div>
         <div class="Software">
-            <img src="/S6C-B2/reasources/image/computer-programingDONE.jpeg" alt="Software">
+            <img id="img" src="/S6C-B2/reasources/image/computer-programingDONE.jpeg" alt="Software">
             <p>Software Design</p>
         </div>
         <div class="Film">
-            <img src="/S6C-B2/reasources/image/FilmStudies2.jpeg" alt="Film">
+            <img id="img" src="/S6C-B2/reasources/image/FilmStudies2.jpeg" alt="Film">
             <P>Film Studies</P>
         </div>
         <div class="photography">
-            <img src="/S6C-B2/reasources/image/s6c_photography.jpeg" alt="photography">
+            <img id="img" src="/S6C-B2/reasources/image/s6c_photography.jpeg" alt="photography">
             <p>photography</p>
         </div>
         <div class="healthAndSocail">
-            <img src="/S6C-B2/reasources/image/HSC-Pathway-1.png" alt="healthAndSocail">
+            <img id="img" src="/S6C-B2/reasources/image/HSC-Pathway-1.png" alt="healthAndSocail">
             <p>Health and Social Care</p>
         </div>
         <div class="sport">
-            <img src="/S6C-B2/reasources/image/sportandexercisescienceDONE.jpeg" alt="sport">
+            <img id="img" src="/S6C-B2/reasources/image/sportandexercisescienceDONE.jpeg" alt="sport">
             <p>Sport</p>
         </div> 
     
