--- a/b2.html
+++ b/b2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript" src="/S6C-B2/reasources/javascript/b2.js"></script>
+    <script defer src="/S6C-B2/reasources/javascript/b2.js"></script>
     <link rel="stylesheet" href="/S6C-B2/reasources/css/b2.css">
     <title>Document</title>
 </head>
@@ -18,7 +18,7 @@
   
         <div class="Art">
             <div class="artImage">
-            <img id="img" src="/S6C-B2/reasources/image/s6c_artanddesign_c.jpeg" alt="picture">
+            <img id="artImg" src="/S6C-B2/reasources/image/s6c_artanddesign_c.jpeg" alt="picture">
             </div>
             <p>Fine Art</p>
         </div>
