added the start of the javascript

--- a/CreativeM/art.html
+++ b/CreativeM/art.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="css/creativem.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Creative Media</title>
+    <title>Fine Art</title>
 </head>
 <body>
     <div class="header">
     <h1></h1>
     </div>
     <div class="Main">
-        <div class="box1">hh</div1>
+        <div class="box1"></div1>
         <div class="box2"></div2>
     <div></div>
     </div>
