--- a/b2.html
+++ b/b2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="/S6C-B2/reasources/javascript/b2.js"></script>
     <link rel="stylesheet" href="/S6C-B2/reasources/css/b2.css">
-    <title>Document</title>
+    <title>Home</title>
 </head>
 
 <body>
@@ -18,8 +18,11 @@
   
         <div class="Art">
             <div class="artImage">
+                <button onclick="websiteLink()">
             <img id="artImg" src="/S6C-B2/reasources/image/s6c_artanddesign_c.jpeg" alt="picture">
-            </div>
+                
+        </button>
+        </div>
             <p>Fine Art</p>
         </div>
         <div class="Media">
