sorted out stuff

--- a/b2.html
+++ b/b2.html
@@ -18,8 +18,8 @@
   
         <div class="Art">
             <div class="artImage">
-                <button onclick="websiteLink()">
-            <img id="artImg" src="/S6C-B2/reasources/image/s6c_artanddesign_c.jpeg" alt="picture">
+                <button id="art" onclick="websiteLink()">
+            <img id="img" src="/S6C-B2/reasources/image/s6c_artanddesign_c.jpeg" alt="picture">
                 
         </button>
         </div>
