--- a/CreativeM/creativem.htm
+++ b/CreativeM/creativem.htm
@@ -9,15 +9,15 @@
 </head>
 <body>
     <div class="header">
-    <h1></h1>
     </div>
     <div class="Main">
-        <div class="box1">hh</div1>
-        <div class="box2"></div2>
-    <div></div>
+        <div class="box1"></div>
+        <div class="box2"></div>
+  
     </div>
     <div class="footer">
-
+        <a class="bt" href="https://salisbury6c.applicaa.com/3">Apply now</a>
+        
     </div>
 </body>
 </html>
