--- a/b2.html
+++ b/b2.html
@@ -18,7 +18,7 @@
   
         <div class="Art">
             <div class="artImage">
-                <button id="art" onclick="websiteLink()">
+                <button id="art" onclick="artClick()">
             <img id="img" src="/S6C-B2/reasources/image/s6c_artanddesign_c.jpeg" alt="picture">
                 
         </button>
