--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/public/reasources/css/b2.css">
+    <link rel="stylesheet" href="/Users/ryandevine/github/final/public/reasources/css/b2.css">
+    <script type="text/javascript" src="/publsic/reasources/javascript/b2.js"></script>
     <title>Document</title>
 </head>
 
 <body>
+
     <div class="header">
-        <img src="/public/reasources/images/s6c_logo_hz.png" alt="logo">
+        <img src="/public/reasources/image/logo.png" alt="logo">
     </div>
     <div class="subjects">
         <div class="Art">
@@ -47,6 +49,7 @@
             <p>Sport</p>
         </div>
     </div>
+    
 </body>
 
 </html>
