--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Users/ryandevine/github/final/public/reasources/css/b2.css">
+    <link rel="stylesheet" href="/public/css/b2.css">
     <script type="text/javascript" src="/publsic/reasources/javascript/b2.js"></script>
     <title>Document</title>
 </head>
@@ -14,6 +14,7 @@
     <div class="header">
         <img src="/public/reasources/image/logo.png" alt="logo">
     </div>
+    <div class="rectangle"></div>
     <div class="subjects">
         <div class="Art">
             <img src="/public/reasources/image/s6c_artanddesign_c.jpeg" alt="Art">
@@ -49,7 +50,9 @@
             <p>Sport</p>
         </div>
     </div>
-    
+   
+ 
+  
 </body>
 
 </html>
