--- a/final/public/index.html
+++ b/final/public/index.html
@@ -4,14 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/public/reasources/css/b2.css">
+    <link rel="stylesheet" href="/public/css/b2.css">
+    <script type="text/javascript" src="/publsic/reasources/javascript/b2.js"></script>
     <title>Document</title>
 </head>
 
 <body>
+
     <div class="header">
         <img src="/public/reasources/image/logo.png" alt="logo">
     </div>
+    <div class="rectangle"></div>
     <div class="subjects">
         <div class="Art">
             <img src="/public/reasources/image/s6c_artanddesign_c.jpeg" alt="Art">
@@ -47,6 +50,9 @@
             <p>Sport</p>
         </div>
     </div>
+   
+ 
+  
 </body>
 
 </html>
