nothing realy changed

--- a/final/public/index.html
+++ b/final/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/public/css/b2.css">
-    <script type="text/javascript" src="/publsic/reasources/javascript/b2.js"></script>
+    <script type="text/javascript" src="/final/public/css/b2.css"></script>
     <title>Document</title>
 </head>
 
@@ -13,6 +13,7 @@
 
     <div class="header">
         <img src="/public/reasources/image/logo.png" alt="logo">
+        <div id="rectangle"></div>
     </div>
     <div class="rectangle"></div>
     <div class="subjects">
