--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <button class="Media">
             <!-- <img src="/reasources/image/Screen-Shot-2017-11-23-at-10.00.16.png" alt="Media"> -->
-        <a href="/CreativeM/art.html"><img src="reasources/image/Screen-Shot-2017-11-23-at-10.00.16.png" alt="Media"></a>
+        <a href="/CreativeM/creativem.htm"><img src="reasources/image/Screen-Shot-2017-11-23-at-10.00.16.png" alt="Media"></a>
         </button>
             <p>Media Studies</p>
         
